@@ -59,6 +59,7 @@ Bug fixes
  * List-based fields within form builder form submissions are now displayed as comma-separated strings rather than as Python lists (Christine Ho, Matt Westcott)
  * Ensure that page editor forms are submitted as multipart when file fields exist in InlinePanels (Wietze Helmantel)
  * The page type usage listing now have a translatable page title (Ramon de Jezus)
+ * Styles for submission filtering form now have a consistent height. (Thijs Kramer)
 
 
 Upgrade considerations
