@@ -99,7 +99,7 @@
                                 {% include "wagtailadmin/shared/field_as_li.html" with field=field field_classes="field-small" li_classes="col4" %}
                             {% endfor %}
                             <li class="submit col2">
-                                <button name="action" value="filter" class="button">{% trans 'Filter' %}</button>
+                                <button name="action" value="filter" class="button button-filter">{% trans 'Filter' %}</button>
                             </li>
                         </ul>
                     </div>
